# ChangeLog for app-emulation/lxc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.58 2015/02/08 09:53:31 hwoarang Exp $

*lxc-1.1.0 (08 Feb 2015)

  08 Feb 2015; Markos Chandras <hwoarang@gentoo.org> +lxc-1.1.0.ebuild,
  metadata.xml:
  Version bump. Bug #538698

  05 Feb 2015; Markos Chandras <hwoarang@gentoo.org> lxc-1.0.6-r1.ebuild,
  lxc-1.0.7.ebuild:
  Add missing use_enable seccomp. Bug #538834

  31 Jan 2015; Markos Chandras <hwoarang@gentoo.org> -lxc-1.0.4.ebuild,
  -lxc-1.0.6.ebuild:
  Drop old

  29 Jan 2015; Mike Frysinger <vapier@gentoo.org> lxc-1.0.7.ebuild:
  Fix by Simran Basi to set distro explicitly to Gentoo to fix cross-compiling.

*lxc-1.0.7 (21 Dec 2014)

  21 Dec 2014; Markos Chandras <hwoarang@gentoo.org> +lxc-1.0.7.ebuild:
  Version bump

  09 Nov 2014; Justin Lecher <jlec@gentoo.org> lxc-1.0.6-r1.ebuild:
  Fix for old bash-completion, #527520

*lxc-1.0.6-r1 (30 Oct 2014)

  30 Oct 2014; Justin Lecher <jlec@gentoo.org> +lxc-1.0.6-r1.ebuild,
  +files/lxc-1.0.6-bash-completion.patch:
  Fix installation of bash-completions, #525808; thanks i.Dark_Templar for the
  initial patch

  18 Oct 2014; Markos Chandras <hwoarang@gentoo.org> -lxc-0.8.0-r1.ebuild,
  -lxc-0.8.0-r2.ebuild, -lxc-0.8.0_rc2-r1.ebuild, -lxc-1.0.3.ebuild,
  metadata.xml:
  remove <1.0.4

*lxc-1.0.6 (18 Oct 2014)

  18 Oct 2014; Markos Chandras <hwoarang@gentoo.org> +files/lxc.initd.3,
  +lxc-1.0.6.ebuild:
  Version bump. Fixes bug #516772, #518484, #519662

*lxc-1.0.4 (15 Jun 2014)

  15 Jun 2014; Markos Chandras <hwoarang@gentoo.org> +lxc-1.0.4.ebuild,
  metadata.xml:
  Version bump

*lxc-1.0.3 (03 May 2014)

  03 May 2014; Markos Chandras <hwoarang@gentoo.org> +lxc-1.0.3.ebuild,
  files/lxc_at.service, metadata.xml:
  Version bump to 1.0.3

*lxc-0.8.0-r2 (19 Apr 2014)

  19 Apr 2014; Pacho Ramos <pacho@gentoo.org> +files/lxc_at.service,
  +lxc-0.8.0-r2.ebuild: