@@ -10,25 +10,25 @@ DIST lxc-1.0.7.tar.gz 564985 SHA256 a0b1b09592e076e270dcb3ba004616d9ac3147f9de0b
 DIST lxc-1.1.0.tar.gz 592543 SHA256 216e806f7e18e5bfbc782493a9e44fc255f24a587d6faee94cda848a0b949155 SHA512 160da88d6dc96cd9f0679f948bfed057c024adcd459fa4b79e872d12284fa3774ac33a13923c6e150072886a371ccfcdf7ab2c4587efa7f6175fc91a67525c4a WHIRLPOOL 2caf81418850ea8b1ecf25b25e799895563ecf1819f32310fcbb4efe88f711eafe2bcb16a0d3b8ee59072c770a5520b4df90a5962215b932e68a4705c4a56d61
 EBUILD lxc-1.0.6-r1.ebuild 5888 SHA256 c8470a673c846599a66c7aab372a9a551a9b2732d35d5fe4142a8ca385c70a51 SHA512 e84b347a0a39eee2c398d89d4cb217b1224f19eab86647d3a479a85b0eeb16f1375606c3c52ce55febe704e2e923890cc77e42940cc968654a60a4ea71a4a792 WHIRLPOOL 7a000c88099ec1dd5deffae80ce9905a274ce1c81e263ca5f12e9b943b455ca66109ea0b3ec9dfb490e326ac09b6e8912786e1138df3a9fe842eca2c9c636092
 EBUILD lxc-1.0.7.ebuild 5917 SHA256 889147f7dbceb408618a81e75789b6f00b24f19b9a7377da74ebfbd1565781d2 SHA512 f88a95ea399ae754202daf570082b3275c464e60a7f6f49485746509bb0a78b44fd43a67dde966ee4123da15d6697524ef46102950396b61ef1eafcecc0cf313 WHIRLPOOL b225c9b00afc6d697d68078f85e244fb3ff8c5e692bb1fae5a4c961ce426852ad612c40ad25e89bd12309c6b0c1c482a6cdd7812356c1f3c7950d07d90141a13
-EBUILD lxc-1.1.0.ebuild 5812 SHA256 b573b1483c8180d2e8aba3ffc70b38a4278e87c3a83915347885056e943aaec1 SHA512 9c6616e56e78bad15c5a9d0719e907ce66b30a87a4521842a5eb36ad953731d814230c7f41362d5f3fe135d0a8c98c2d19eef7b33863bdee11179797dfdba367 WHIRLPOOL 2108bc1ff11c8f367da6536164303f8acb106d096a72b95c7f108d52818e2c2d98fcb1ff2fa46048eba02e2221ac73de6f8551d9f10d74baae574d6c8ef901c0
-MISC ChangeLog 12294 SHA256 9ba441072acc3bdab2637b29c558f45c4e8e6f4191419dde46a63bd797572cc9 SHA512 5f97c11af7fb7f28cf87c32225b6894b3ab39cf2c209cdf9d5d03f19d509ade052ec44bf0ff91b2e2536284e99d2a7a4d656159f132ac151b87fde290f04ed9b WHIRLPOOL 42a4bbf1579d580513214a8d1372d374cd3e51b94d34b5cc0fe302a0219f7a781b921e68a3b00d5ae63f3b91d9d752fd77cb8b8507cb41af4aebef4bc66b6260
+EBUILD lxc-1.1.0.ebuild 5920 SHA256 69fe56ae8da67fcca434192088a91af500eeaeb5ad1afbd2e0b284a24a61e308 SHA512 fda24963b4fbdd06ab6166b13649ea59b82ca4acfe6a29d1ed64778277fb1e3a99cd5c2d1d62336882271040d22b9ae2653836b1de03da8ee39138d64169cf0f WHIRLPOOL 654e9879af5bcadc75d296cdc1e2fc9ed3a7941181e776d0016cc7b71a6ecc3547d34c6795463d49224e052f424dfed7318104d0e7b82ee8efafe663d6d7bb0d
+MISC ChangeLog 12423 SHA256 2cecb05c02059ff059bb5edbc8528fc04e29725e5fdca714a35d974bd21c0969 SHA512 11c3a38a5c360d0a3e7a256434ca3e6657953155ac04b78817e2ee4921becc941c041f86acfc0bb476ddea572fa8e20dabf3f48340a92c6bcad48176f0fc0360 WHIRLPOOL 3fb6c2ca92de7b836a022059d9cf71380485187a2af36eeee780f2f94f705f8dd894851c776be3de818c285867664b705a917b8ce0e3d6cafa389f2ed62287a8
 MISC metadata.xml 602 SHA256 9499be0ed7a430f9b8492a9db1dbebd9eff3c495962882c6c6e35c96f3cbc5d6 SHA512 fa7af1390b3e60c04dfa085654d68e121b476ed1e92e367d9b9aab2aabd6b8e8b028db9704161c1da25b3b62fce268ef503eea229da37a3f09fb1235c78847fb WHIRLPOOL 9760914ec9365c7c5f904fee3282b942b37b7afc723cc00694ddf0705c052f32b5328eff26517d3e668676ffe92f6a117abe25e5e5373deda2adea61c607fc15
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU1zIdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU1zVHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88LQwQALElEhdScb7r18Yl3F6/M2Rw
-sslHbIOeY2OearhJ6SL05VyKQ5df/CovQAOYejWSpVzI/eHZWslwLgdy+yvHV1Uk
-W4ukY835NFQ9N7PxWGHAac5gT82GXy3dMLfzyNd/NVKMX5fZ7/DBXCh5Z3mI1mPQ
-DuL8ELKDxEI3dpsBFJWHsUVaIpimsrOt3ebjRROx7Ap0gFzn51tqlF5OoVas7jQX
-GsRyG2rkVbeW6GeJHXVoo52VP/UaKdc86yfkRd8HolZFCe6zm/Y0PWo5abwgxBPy
-3ToeMIjtA51YrzwuFpk8gOju4yqLmUujWYcnZVJCENoF5f134aEUpBQOfHXwp3L9
-jvOCwLOjKLUz/O1TWEhxPiAMQMnLNpQoBgTDEWSNLNFscfZYZ1fFXk0wE8MutX0j
-Hx3K7r7K4rOdF1dPfW8RmxCS72lm2X2HljbivFacB0YByEQi3kdQ9ggdQJCx2gGp
-e0TSy4hbNnRiLyBpTgki7tpPgtGsaAqEuoP+T2mjkJcn6uyJ1dJDoqsbGhr4uFWo
-9puHU/aiQVp0fjBEGvUXtCZSBzPY/4fahWQHCFOg59O0ClRi/2bQYKw9UzI1XMCP
-4Wop8X+XBFKcIrSh2wO1AQ5F7M4ZS83I5WEqbOljv8HXDUsglR/75ZTbu7lFXqRE
-VIk+OeHTyWUw8LlqPFM3
-=nGD2
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88ijAP/0GSYwv2q06BgEI24RNgvSgr
+3rr9eQR0oAcmvIhnOEFslw9Ls3lmOXQdCuHotW6RxtgnxTU85EBSVqxEFceuF49c
+oI0HRlIuh6OBtw2d+ig6a0HehjULw6LaCIljTQlUKTg2QuYyH7Ami0YL57R7L7Ix
+pWA9tKqvK6mhHkpL1ESdq/H/FNXgNyQLoU8pexkpiDpLLrtVjcHKFMWLHX8/BRuu
+cd9U4/K102AyMLPH7MDY/QUrMxkVU3n/QHMN1uJITdl29yCHi1APpc8/ECvl8XRz
+Ul2CEN/GcVACF0L3YjjwhN8W5+qrfICCUS2bxlJhtkMnIMTMT0HsRKvVGbSQCStq
+hf7dVhjzUMpSx2SHlAifZnvGheEkhwzEAFuRWJJA0fVW29U05/cUseBadhy1p7yu
+AO1/rc9zyLDeEF45azonskitnrkhbPJvLFZqB95UR0EBnPuGcfwf9C+SQgArrKjN
+vHuwYVL110OQT9KDnkZYNTVJU4PFodRg/t5g2bXGK47E7/G2w0JSArc7YvHHBg9H
+z49PuqVUd/oKpSkX3H5DrIkT8Jy0b2fjuRqPvsa/MJtioDfa5FDD1Z+5DrCLSn1E
+kaqo0Obtfj1slzhSKHq9r/vHsPYAEFPr03d4sxQ7cskx/TeTIj5UaeyMFT/j9K+1
+KdLIgFeKuWSxw1Bi5DhV
+=DEIC
 -----END PGP SIGNATURE-----
