@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/lxc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.58 2015/02/08 09:53:31 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.59 2015/02/08 10:06:47 hwoarang Exp $
+
+  08 Feb 2015; Markos Chandras <hwoarang@gentoo.org> lxc-1.1.0.ebuild:
+  Add another kernel config check for CHECKPOINT_RESTORE
 
 *lxc-1.1.0 (08 Feb 2015)
 
